--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
-
 /*adding animations*/
 @keyframes Load {
   0%{
@@ -11,6 +10,17 @@
     transform: translateY(0%);
   }
 }
+
+@keyframes slideRight {
+  0%{
+    transform:translateX(-100%);
+  }
+
+  100%{
+    transform: translateX(0%);
+  }
+}
+
 /*global colors*/
 * {
   --mainColor: #a458a2;
