--- a/src/app/navigationbar/navigationbar.component.css
+++ b/src/app/navigationbar/navigationbar.component.css
@@ -58,23 +58,19 @@ ul a {
   color: white;
 }
 
-ul li {
-  padding: 5px;
-  margin-left: 10px;
-}
-
 ul li:hover {
   transform: scale(1.1);
   transition: 0.3s;
 }
 
-#login,
+#nav-content,
 #dashBoard {
   border-radius: 5px;
   padding: 5px 8px;
+  margin: 8px;
 }
 
-#login {
+#nav-content {
   border: 1px solid #498afb;
 }
 
@@ -82,7 +78,7 @@ ul li:hover {
   color: #ff3860;
 }
 
-#login a {
+#nav-content a {
   color: #498afb;
 }
 
@@ -120,10 +116,10 @@ ul li:hover {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding-right: 50px;
   background: rgb(0,0,0);
   background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 14%, rgba(188,60,192,1) 35%, rgba(0,0,0,1) 64%, rgba(217,18,199,1) 82%, rgba(0,0,0,1) 90%);
   animation: slideRight 600ms ease-in-out;
+  padding: 20px;
 }
 
 .mobile-menu {
@@ -135,12 +131,12 @@ ul li:hover {
   height: calc(100vh - 50px);
   width: 100%;
   z-index: 2;
+  padding: 20px;
 }
 
-.mobile-menu li a{
-  margintop: 10px;
-  text-align: center;
-
+.mobile-menu__link{
+  width: 100%;
+  padding: 10px;
 }
 
 @media only screen and (max-width: 600px) {
