--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,7 +6,7 @@
       <input id="hero-name" class="hero-details-input" [(ngModel)]="hero.name" placeholder="name">
     </div>
     <h3><span>Id: </span>{{hero.id}}</h3>
-    <button class="hero-details-card-buttons" name="backButton" type="button" (click)="goBack()">Back</button>
-    <button class="hero-details-card-buttons" name="save" (click)="save()">save info</button>
+    <button class="btn" name="backButton" type="button" (click)="goBack()">Back</button>
+    <button class="btn" name="save" (click)="save()">save info</button>
   </div>
 </div>
