started displaying data form my database with get request
	changed the interface to be the same as my json response file

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <h2>Top Heroes!</h2>
 <div class="heroes-menu">
   <a *ngFor="let hero of heroes"
-     routerLink="/detail/{{hero.id}}">
+     routerLink="/detail/{{hero.HeroId}}">
    <span class="heroDashboardImg">
    <img src="assets/hero.default.png" style="width: inherit;">
    </span>
     <span>
-   {{hero.name}}
+   {{hero.HeroFirstName}}
    </span>
   </a>
 </div>
