--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -12,7 +12,7 @@
 /*stlying the card*/
 .hero-details-card {
   width: 30%;
-  margin: auto;
+  margin: 100px auto;
   padding: 35px;
   border: 2px solid #18606a;
   border-radius: 2%;
